[package]
name = "tma-16-rs"
version = "0.1.3" # gonna keep the version number the same as the TMA-16 version
authors = ["Dante Falzone <dante.j.falzone@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termios = "0.3"
libc = "0.2"
